# OptimalClockOffline

./: .clang-format  .gitignore  .vimrunner  CMakeLists.txt  README.md  datasets.sh  dist.sh  download_task.sh  download_trace.sh  filter_links.sh  main.cpp  setup.sh  test.txt  traces.txt
_build/: CMakeCache.txt  Makefile  cacheSimulator  cmake_install.cmake  compile_commands.json
diagrams/: .vimrunner  flow_chart.mmd
docs/: CloudPhysics All Model with all treshold_obj_size_ignored.html  CloudPhysics All Model with base treshold_obj_size_ignored.html  CloudPhysics Base Model_obj_size_ignored.html  CloudPhysics Current Best Models_obj_size_ignored.html  CloudPhysics Decay Model with All Treshold _obj_size_ignored.html  CloudPhysics Decay Model with Treshold 0.3_obj_size_ignored.html  CloudPhysics Decay Model with Treshold 0.5_obj_size_ignored.html  CloudPhysics Decay Model with Treshold 0.6_obj_size_ignored.html  CloudPhysics Decay Model with Treshold 0.7_obj_size_ignored.html  CloudPhysics Decay Model with Treshold 0.8_obj_size_ignored.html  CloudPhysics Decay Model with Treshold 0.9_obj_size_ignored.html  CloudPhysics Models that use ObjID vs Model that does not_obj_size_ignored.html  CloudPhysics New Model With Selected Treshold_obj_size_ignored.html  CloudPhysics New Model_obj_size_ignored.html  CloudPhysics Selected Non-Decay vs Decay Model with All Treshold_obj_size_ignored.html  CloudPhysics Selected Non-Decay vs Decay Model with Treshold 0.3_obj_size_ignored.html  CloudPhysics Selected Non-Decay vs Decay Model with Treshold 0.5_obj_size_ignored.html  CloudPhysics Selected Non-Decay vs Decay Model with Treshold 0.6_obj_size_ignored.html  CloudPhysics Selected Non-Decay vs Decay Model with Treshold 0.7_obj_size_ignored.html  CloudPhysics Selected Non-Decay vs Decay Model with Treshold 0.8_obj_size_ignored.html  CloudPhysics Selected Non-Decay vs Decay Model with Treshold 0.9_obj_size_ignored.html  CloudPhysics Weighted Models with All Treshold_obj_size_ignored.html  CloudPhysics Weighted Models with Treshold 0.3_obj_size_ignored.html  CloudPhysics Weighted Models with Treshold 0.5_obj_size_ignored.html  CloudPhysics Weighted Models with Treshold 0.6_obj_size_ignored.html  CloudPhysics Weighted Models with Treshold 0.7_obj_size_ignored.html  CloudPhysics Weighted Models with Treshold 0.8_obj_size_ignored.html  CloudPhysics Weighted Models with Treshold 0.9_obj_size_ignored.html  Zipf0 All Model.html  Zipf0 All Model_obj_size_ignored.html  Zipf0 All Model_obj_size_not_ignored.html  Zipf0 Base Model.html  Zipf0 Base Model_obj_size_ignored.html  Zipf0 Base Model_obj_size_not_ignored.html  Zipf0 New Model With Selected Treshold.html  Zipf0 New Model With Selected Treshold_obj_size_ignored.html  Zipf0 New Model With Selected Treshold_obj_size_not_ignored.html  Zipf0 New Model.html  Zipf0 New Model_obj_size_ignored.html  Zipf0 New Model_obj_size_not_ignored.html  (+52 more)
lib/: CLI11.hpp
python/: common.py  csv_to_plot.py  describe_csv.py  index.html  md_to_html.py  plot_result.py  requirement.txt  requirements.txt  result_to_md.py  simple_trace.py
result/: CloudPhysics All Model with base treshold_obj_size_ignored.md  CloudPhysics Base Model_obj_size_ignored.md  CloudPhysics Current Best Models_obj_size_ignored.md  CloudPhysics Decay Model with Treshold 0.3_obj_size_ignored.md  CloudPhysics Decay Model with Treshold 0.5_obj_size_ignored.md  CloudPhysics Decay Model with Treshold 0.6_obj_size_ignored.md  CloudPhysics Decay Model with Treshold 0.7_obj_size_ignored.md  CloudPhysics Decay Model with Treshold 0.8_obj_size_ignored.md  CloudPhysics Decay Model with Treshold 0.9_obj_size_ignored.md  CloudPhysics Models that use ObjID vs Model that does not_obj_size_ignored.md  CloudPhysics New Model With Selected Treshold_obj_size_ignored.md  CloudPhysics New Model_obj_size_ignored.md  CloudPhysics Selected Non-Decay vs Decay Model with All Treshold_obj_size_ignored.md  CloudPhysics Selected Non-Decay vs Decay Model with Treshold 0.3_obj_size_ignored.md  CloudPhysics Selected Non-Decay vs Decay Model with Treshold 0.5_obj_size_ignored.md  CloudPhysics Selected Non-Decay vs Decay Model with Treshold 0.6_obj_size_ignored.md  CloudPhysics Selected Non-Decay vs Decay Model with Treshold 0.7_obj_size_ignored.md  CloudPhysics Selected Non-Decay vs Decay Model with Treshold 0.8_obj_size_ignored.md  CloudPhysics Selected Non-Decay vs Decay Model with Treshold 0.9_obj_size_ignored.md  CloudPhysics_obj_size_ignored.md  (+73 more)
(+47859 files in other folders)
